--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ html {
         <div class="tabs-content" data-tabs-content="widget-tabs-0">
             <div class="tabs-panel is-active" id="panel-0-0">
                 <!--<p><B>Overview</B></p>-->
-                <p style="font-size: 12px;">benvenuti! </p>
+                <p><img src="blank.png" width="12" height="12" alt=""/></p>
 
   				<p><img src="benvenuti.png" width="791" height="153" alt=""/></p>
 				<p>Welcome to our chapter of the Italian Honor Society. We celebrate Italian culture, language, and community!</p>
